adde move on screen, rotate

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
+    <div class="tpContainer" id="tpContainer">
+        <div class="teleBottom" id="bottom"></div>
+    </div>
     <div id="pet" class="pet"></div>
+    <div id="shadow" class="shadow"></div>
     <script type="module" src = "./index.js"></script>
 </body>
 </html>
